# VirtualBlockWorld

./: .gitignore  README.md  bluemap.md  format.json  shell.md  vbw how to.md
bluemap/: CN.md  EN.md  ZH.md
bluemap/cn/: avatar.md  block.md  chord.md  coin.md  gift.md  importer.md  king.md  management.md  module.md  node.md  publish.md  reademe.md  resource.md  stair.md  stop.md  struct.md  summary.md  tree.md  trigger.md  wall.md  world.md
bluemap/en/: block.md  coin.md  gift.md  importer.md  king.md  module.md  node.md  publish.md  resource.md  stop.md  tree.md  trigger.md  wall.md  world.md
pallet/vbw/: Cargo.toml
pallet/vbw/src/: lib.rs
pok.0.41.0/: package-lock.json  package.json
pok.0.49.1/: .gitignore  package.json
polkadot/: package-lock.json  package.json  tsconfig.json
sub.2.0.0.rc5/: Cargo.toml
sub.2.0.0.rc5/client/executor/: Cargo.toml
sub.2.0.0.rc5/frame/vbw/: Cargo.toml
sub.2.0.0.rc5/frame/vbw/src/: lib.rs  vdecode.rs
sub.3.0.0/: Cargo.toml
sub.3.0.0/frame/vbw/: Cargo.toml
sub.3.0.0/frame/vbw/src/: lib.rs  vdecode.rs
substrate/: Cargo.toml
substrate/client/executor/: Cargo.toml
substrate/frame/contracts/: Cargo.toml
substrate/frame/vbw-old/: Cargo.toml
substrate/frame/vbw-old/src/: block.rs  decode.js  kitty.rs  lib.rs  tests.rs  tpl.rs  world.rs
substrate/primitives/sandbox/: Cargo.toml
ui/page-resource/src/: Summary.tsx  index.tsx
ui/page-resource/src/common/: tools.ts
ui/page-resource/src/module/: ModuleUploader.tsx
ui/page-resource/src/texture/: TexturePreview.tsx
ui/page-vbw/block/: entry.ts  runtime.ts
ui/page-vbw/resource/: uploader.ts
(+23 files in other folders)
