[package]
name = "pallet-vblock"
version = "0.0.1-alpha.1"
authors = ["Fuu <ff13dfly@163.com>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "vbw example pallet"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }
frame-benchmarking = { version = "2.0.0-alpha.2", default-features = false, path = "../benchmarking" }
frame-support = { version = "2.0.0-alpha.2", default-features = false, path = "../support" }
frame-system = { version = "2.0.0-alpha.2", default-features = false, path = "../system" }
pallet-balances = { version = "2.0.0-alpha.2", default-features = false, path = "../balances" }
sp-runtime = { version = "2.0.0-alpha.2", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "2.0.0-alpha.2", default-features = false, path = "../../primitives/std" }
sp-io = { version = "2.0.0-alpha.2", default-features = false, path = "../../primitives/io" }

redis = { version = "0.12.0", optional = true,default-features = false}
#simple_redis = "0.3.44"		#redis支持引入，但编译不过～～

[dev-dependencies]
sp-core = { version = "2.0.0-alpha.2", path = "../../primitives/core" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std"
]
